# aqueous

./: CMakeLists.txt  MANIFEST.in  README.md  Untitled.ipynb  data.yaml  pyproject.toml  setup.py  spronsbl.yaml
aqueous/: __init__.py  aqueous_nb.py
aqueous/data/: sprons96.yaml
aqueous/wrapper/: CMakeLists.txt  _aqueous.pyx  aqueous_pxd.pxd  aqueous_wrapper.f90  aqueous_wrapper.h
gibbs/: __init__.py  gibbs_nb.py
gibbs/data/: sprons96.yaml
gibbs/wrapper/: CMakeLists.txt  _gibbs.pyx  gibbs_pxd.pxd  gibbs_wrapper.f90  gibbs_wrapper.h
src/: CMakeLists.txt  aqueous.f90  aqueous_constants.f90  aqueous_database.f90  aqueous_equilibrium.f90  aqueous_types.f90  gibbs.f90  gibbs_constants.f90  gibbs_database.f90  gibbs_equilibrium.f90  gibbs_types.f90
test/: test.f90  test_aqueous.f90  test_aqueous.py
